carousel - fixed spacings between header & text by adding top margin. removed hypens in img paths & CTA buttons

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -607,6 +607,13 @@
 #main-slider .text1 { font-size: 20px; line-height: 30px; }
 #main-slider .text2 { font-size: 16px; line-height: 26px; }
 
+#main-slider .text-margin-top {
+	margin-top: 70px;
+}
+
+
+
+
 #main-slider .bwp-button {
 	padding: 12px 37px;
     transition: all ease .238s !important;
